--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,8 +4,10 @@
 name: project cicd flow
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:[Main]
+  pull_request:
+    branches:[Main]
 
 jobs:
   build:
@@ -28,7 +30,3 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
